A few paragraphs added

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -11,6 +11,9 @@
 
 <body>
 	<h1>Профіль userName</h1>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, magni.</p>
+	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi id iste harum nam quod explicabo sequi odio
+		unde nisi! Explicabo.</p>
 </body>
 
 </html>
