--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 <body>
 	<h1>Головна сторінка сайту</h1>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio dolorem, hic libero provident, veniam obcaecati eos
+		esse, sunt facere ipsa veritatis nisi ut nihil quasi nobis! A, minus aut! Commodi.</p>
 </body>
 
 </html>
