--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 
 <body>
 	<h1>Головна сторінка сайту</h1>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio dolorem, hic libero provident, veniam obcaecati eos
-		esse, sunt facere ipsa veritatis nisi ut nihil quasi nobis! A, minus aut! Commodi.</p>
+	<p>
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio dolorem, hic libero provident, veniam obcaecati eos
+		esse, sunt facere ipsa veritatis nisi ut nihil quasi nobis! A, minus aut! Commodi.
+	</p>
+	<h2>Lorem</h2>
 </body>
 
 </html>
