--- a/pages/profile.html
+++ b/pages/profile.html
@@ -14,6 +14,10 @@
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, magni.</p>
 	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi id iste harum nam quod explicabo sequi odio
 		unde nisi! Explicabo.</p>
+	<h2>
+		Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta dolorum consectetur magnam non perferendis aut est
+		minus sequi obcaecati sapiente?
+	</h2>
 </body>
 
 </html>
