Added new images

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 		esse, sunt facere ipsa veritatis nisi ut nihil quasi nobis! A, minus aut! Commodi.
 	</p>
 	<h2>Lorem</h2>
+	<img src="/assets/images/peppa.jpg" alt="Peppa">
+	<br>
+	<img src="/assets/images/shrek.jpg" alt="Shrek">
 </body>
 
 </html>
