--- a/pages/profile.html
+++ b/pages/profile.html
@@ -18,6 +18,9 @@
 		Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta dolorum consectetur magnam non perferendis aut est
 		minus sequi obcaecati sapiente?
 	</h2>
+	<img src="/assets/images/chip.jpg" alt="Chip">
+	<br>
+	<img src="/assets/images/grinch.jpeg" alt="Grinch">
 </body>
 
 </html>
