Added new title to images

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 		esse, sunt facere ipsa veritatis nisi ut nihil quasi nobis! A, minus aut! Commodi.
 	</p>
 	<h2>Lorem</h2>
-	<img src="/assets/images/peppa.jpg" alt="Peppa">
+	<img src="/assets/images/peppa.jpg" alt="Peppa" title="Peppa pig">
 	<br>
-	<img src="/assets/images/shrek.jpg" alt="Shrek">
+	<img src="/assets/images/shrek.jpg" alt="Shrek" title="Shrek good guy">
 </body>
 
 </html>
