--- a/pages/profile.html
+++ b/pages/profile.html
@@ -18,9 +18,9 @@
 		Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta dolorum consectetur magnam non perferendis aut est
 		minus sequi obcaecati sapiente?
 	</h2>
-	<img src="/assets/images/chip.jpg" alt="Chip">
+	<img src="/assets/images/chip.jpg" alt="Chip" title="Chip and Dale">
 	<br>
-	<img src="/assets/images/grinch.jpeg" alt="Grinch">
+	<img src="/assets/images/grinch.jpeg" alt="Grinch" title="Grinch and Christmas">
 </body>
 
 </html>
