--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 		esse, sunt facere ipsa veritatis nisi ut nihil quasi nobis! A, minus aut! Commodi.
 	</p>
 	<h2>Lorem</h2>
+	<footer>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit doloremque placeat soluta facilis cupiditate
+		incidunt, quis nulla, corporis architecto debitis repudiandae alias officiis saepe quia, ratione veritatis
+		voluptates laborum! Nihil fugiat explicabo eveniet qui sequi labore veritatis eligendi, inventore aliquam?
+	</footer>
 </body>
 
 </html>
