--- a/pages/profile.html
+++ b/pages/profile.html
@@ -18,6 +18,7 @@
 		Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta dolorum consectetur magnam non perferendis aut est
 		minus sequi obcaecati sapiente?
 	</h2>
+	<footer>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, iusto rem modi vero magni itaque?</footer>
 </body>
 
 </html>
