Some new img added

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 	<img src="/assets/images/peppa.jpg" alt="Peppa" title="Peppa pig">
 	<br>
 	<img src="/assets/images/shrek.jpg" alt="Shrek" title="Shrek good guy">
+	<br>
+	<img src="/assets/images/bob.jpg" alt="Bob" title="Bob good guy">
 </body>
 
 </html>
