--- a/pages/profile.html
+++ b/pages/profile.html
@@ -21,6 +21,8 @@
 	<img src="/assets/images/chip.jpg" alt="Chip" title="Chip and Dale">
 	<br>
 	<img src="/assets/images/grinch.jpeg" alt="Grinch" title="Grinch and Christmas">
+	<br>
+	<img src="/assets/images/cossacks.jpg" alt="Cossacks" title="Ukraine cossacks">
 </body>
 
 </html>
