--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+	<header>Був собы одинокий хедер</header>
 	<h1>Головна сторінка сайту</h1>
 	<p>
 		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio dolorem, hic libero provident, veniam obcaecati eos
