--- a/pages/profile.html
+++ b/pages/profile.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+	<header>Такий собі хедер</header>
 	<h1>Профіль userName</h1>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, magni.</p>
 	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi id iste harum nam quod explicabo sequi odio
