Aside info changed

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio dolorem, hic libero provident, veniam obcaecati eos
 		esse, sunt facere ipsa veritatis nisi ut nihil quasi nobis! A, minus aut! Commodi.
 	</p>
-	<aside>Тут може бути ваша реклама</aside>
+	<aside>Тут може бути ваша реклама. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, est?</aside>
 	<h2>Lorem</h2>
 	<footer>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit doloremque placeat soluta facilis cupiditate
 		incidunt, quis nulla, corporis architecto debitis repudiandae alias officiis saepe quia, ratione veritatis
