--- a/pages/profile.html
+++ b/pages/profile.html
@@ -15,7 +15,7 @@
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, magni.</p>
 	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi id iste harum nam quod explicabo sequi odio
 		unde nisi! Explicabo.</p>
-	<aside>Тут може бути ваша реклама</aside>
+	<aside>Тут може бути ваша реклама. Lorem ipsum dolor sit amet consectetur adipisicing elit.</aside>
 	<h2>
 		Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta dolorum consectetur magnam non perferendis aut est
 		minus sequi obcaecati sapiente?
