Now added new p to footer

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<footer>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit doloremque placeat soluta facilis cupiditate
 		incidunt, quis nulla, corporis architecto debitis repudiandae alias officiis saepe quia, ratione veritatis
 		voluptates laborum! Nihil fugiat explicabo eveniet qui sequi labore veritatis eligendi, inventore aliquam?
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, eum!</p>
 	</footer>
 </body>
 
