--- a/pages/profile.html
+++ b/pages/profile.html
@@ -19,7 +19,9 @@
 		Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta dolorum consectetur magnam non perferendis aut est
 		minus sequi obcaecati sapiente?
 	</h2>
-	<footer>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, iusto rem modi vero magni itaque?</footer>
+	<footer>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, iusto rem modi vero magni itaque?
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, eum!</p>
+	</footer>
 </body>
 
 </html>
