--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
 	<header>Був собы одинокий хедер</header>
+	<label><input type="checkbox"> Росомаха</label>
 	<h1>Головна сторінка сайту</h1>
 	<p>
 		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio dolorem, hic libero provident, veniam obcaecati eos
